# MsAIDS

./: .gitignore  README.md
AaCI/: PW1.ipynb  PW5.ipynb
AaCI/.ipynb_checkpoints/: PW4-checkpoint.ipynb
DSaA/: README.md
DSaA/Projects/Probability-Calculator/: CMakeLists.txt  README.md  main.c
DSaA/Projects/Probability-Calculator/distributions/: Chi_Square.csv  F.csv  Student_T.csv  hey.csv
DSaA/Projects/Probability-Calculator/include/: csv.h  distribution.h  utils.h
DSaA/Projects/Probability-Calculator/src/: csv.c  distribution.c  utils.c
DSaA/Scripts/: lsR.sh
DSaA/Utils/: buble_sort.c  merge_sort  merge_sort.c  selection_sort  selection_sort.c  sleep_sort  sleep_sort.c
DSaA/pw0/: EX6
Data-Mining/Workshop/: Ali_Khudiyev-Tp4-DSAI.ipynb  TP3-PM - solution.ipynb  ws1.ipynb
Data-Science/.ipynb_checkpoints/: LC1-checkpoint.ipynb  Practical2-checkpoint.ipynb
Distributed-Algorithms/Practicals/: pw3.md
Image-Analysis/PW/: PW1.ipynb  Practical1_UFAZ.ipynb  Practical2.ipynb  Practical3.ipynb
M1/AaCI/: PW5 - TF2 Training DNN.html  README.md
M1/Applied-Math/: poly-divider.ipynb
M1/Data-Science/: Practical1.ipynb  TP2-Covid19.csv
M1/Image-Analysis/: README.md
Parallel-Programming/: convolution  convolution.cu  matmul.cpp  matmul.cu  scan_cu  stencil2D.cu  stencil_cu  transpose  transpose.cpp  transpose_cu
Project-Management/Differential-Evolution/: CMakeLists.txt  DEA-presentation.key  README.md  check.py  check_function.cpp  cli.sh  dea.sh  differential-evolution.py  eval.sh  function.h  main  main.cpp  parser.h  set_function.sh  stock.txt  test.cpp  visualizer.py
Project-Management/Differential-Evolution+Genetic/: CMakeLists.txt  Presentation.key  benchmarks.txt  cli.sh  function.out  metaheuristic-optimization.py
Project-Management/Differential-Evolution+Genetic/resources/GA/GA/: CrossoverSBX.m  MutationPoly.m  Rastrigin.m  Rosenbrock.m  ScriptGA.m  SphereNew.m
Project-Management/Differential-Evolution+Genetic/src/: dea.cpp  function.h  ga.cpp  ga.h  parser.h
Project-Management/Differential-Evolution/src/: benchmark.h  check_function.cpp  dea.cpp  dea.h  function.h  ga.cpp  ga.h  main.cpp  parser.h  visualizer.py
(+506 files in other folders)
